--- a/PrimeWords/Resources/Localization/en.lproj/Localizable.strings
+++ b/PrimeWords/Resources/Localization/en.lproj/Localizable.strings
@@ -14,8 +14,5 @@
 
 // MARK: - Book Details
 
-/* Analysis Complete! */
-"PrimeWords.BookDetails.Progress.Complete" = "Analysis Complete!";
-
-/* X lines processed */
-"PrimeWords.BookDetails.Progress.Title" = "%td lines processed";
+/* Results */
+"PrimeWords.BookDetails.Title" = "Results";
